Added ICurrentContentAccessor and fixed a bunch of compiler warnings.

--- a/IDeliverable.Bits.csproj
+++ b/IDeliverable.Bits.csproj
@@ -59,10 +59,6 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
-    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
@@ -108,6 +104,14 @@
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Orchard.Alias\Orchard.Alias.csproj">
+      <Project>{475b6c45-b27c-438b-8966-908b9d6d1077}</Project>
+      <Name>Orchard.Alias</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orchard.Conditions\Orchard.Conditions.csproj">
+      <Project>{98251eae-a41b-47b2-aa91-e28b8482da70}</Project>
+      <Name>Orchard.Conditions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Orchard.ContentPicker\Orchard.ContentPicker.csproj">
       <Project>{f301ef7d-f19c-4d83-aa94-cb64f29c037d}</Project>
       <Name>Orchard.ContentPicker</Name>
@@ -139,6 +143,8 @@
     <Compile Include="Navigation\Migrations\Migrations.cs" />
     <Compile Include="Navigation\Filters\OmniNavigationProvider.cs" />
     <Compile Include="Recipes\Builders\RemovePublishedUtcStep.cs" />
+    <Compile Include="Services\CurrentContentAccessor.cs" />
+    <Compile Include="Services\ICurrentContentAccessor.cs" />
     <Compile Include="Services\IRouteValuesProcessor.cs" />
     <Compile Include="Services\RouteValuesAlternatesProvider.cs" />
     <Compile Include="Navigation\Shapes\MenuWidgetShapeAlternates.cs" />
