--- a/IDeliverable.Bits.csproj
+++ b/IDeliverable.Bits.csproj
@@ -98,7 +98,7 @@
     <Content Include="packages.config" />
     <None Include="Placement.info" />
     <Content Include="Web.config" />
-    <Content Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Module.txt" />
     <Content Include="Views\EditorTemplates\Parts\RelatedBy.cshtml" />
     <Content Include="Views\EditorTemplates\Elements\NamedElement.cshtml" />
