--- a/IDeliverable.Bits.csproj
+++ b/IDeliverable.Bits.csproj
@@ -126,6 +126,10 @@
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Orchard.Alias\Orchard.Alias.csproj">
+      <Project>{475b6c45-b27c-438b-8966-908b9d6d1077}</Project>
+      <Name>Orchard.Alias</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Orchard.Autoroute\Orchard.Autoroute.csproj">
       <Project>{66fccd76-2761-47e3-8d11-b45d0001ddaa}</Project>
       <Name>Orchard.Autoroute</Name>
@@ -198,6 +202,8 @@
     <Compile Include="Helpers\ZoneHelpers.cs" />
     <Compile Include="Navigation\Migrations\Migrations.cs" />
     <Compile Include="Navigation\Filters\OmniNavigationProvider.cs" />
+    <Compile Include="Routing\PartialAliasRoute.cs" />
+    <Compile Include="Routing\PartialAliasHelper.cs" />
     <Compile Include="Services\CurrentContentAccessor.cs" />
     <Compile Include="Services\ICurrentContentAccessor.cs" />
     <Compile Include="Services\IRouteValuesProcessor.cs" />
